minor: fix SearchServiceKNNTest style issues from code review